apiserver/yaml/apiserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
  namespace: default
  labels:
    k8s-app: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: apiserver
  template:
    metadata:
      name: apiserver
      labels:
        k8s-app: apiserver
    spec:
      containers:
        - name: apiserver
          image: ghcr.io/dekeyrej/apiserver:dev
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /live
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: ghcr-login-secret
