apiserver/yaml/apiserver-lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-service
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.98
  ports:
  - port: 80
    targetPort: 8000
    name: apiserver
  selector:
    k8s-app: apiserver
