apiserver/yaml/apiserver-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver-service
  namespace: default
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8000
    name: apiserver
  selector:
    k8s-app: apiserver
