apiserver/yaml/apiserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: apiserver-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: theoden.pjis.net
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: apiserver-service
            port:
              number: 8000
